--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 2.6)
 add_subdirectory(Arrays)
 add_subdirectory(LinkedList)
 add_subdirectory(Queue)
+add_subdirectory(HashTable)
