Modified overall cmake file to add Trees folder to build and also run the executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(Arrays)
 add_subdirectory(LinkedList)
 add_subdirectory(Queue)
 add_subdirectory(HashTable)
+add_subdirectory(Trees)
